Fix part of Bug 419116 Sending mail through SMTP server that doesn't require user:pass fails - correct building of url spec in nsSmptService r=philor,dmose,sr=Neil